Exclude /docs from swagger definition
Commit includes `npm run swagger-autogen`
