# lib/router/router.js
@@ -196,7 +196,7 @@ var swaggerOptions = {
   customCss: '.swagger-ui .topbar { display: none } '
 };
 router.use('/docs', swaggerUi.serve)
-router.get('/docs', swaggerUi.setup(swaggerDocument, swaggerOptions))
+router.get('/docs', swaggerUi.setup(swaggerDocument, swaggerOptions) /* #swagger.ignore = true */ ) 
 
 module.exports = router
 
