# swagger-output.json
@@ -296,14 +296,6 @@
         "parameters": [],
         "responses": {}
       }
-    },
-    "/docs": {
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [],
-        "responses": {}
-      }
     }
   },
   "definitions": {
